--- a/shoppingCart_product.html
+++ b/shoppingCart_product.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container main">
         <!-- 麵包屑 -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent pl-0">
@@ -106,7 +106,7 @@
                             <option value="2">2 件</option>
                             <option value="3">3 件</option>
                         </select>
-                        <a href="#" class="btn btn-primary">加入購物車</a>
+                        <a href="./shoppingCart_checkout.html" class="btn btn-primary">加入購物車</a>
                     </div>
                 </div>
             </div>
