--- a/shoppingCart_checkout.html
+++ b/shoppingCart_checkout.html
@@ -16,7 +16,7 @@
 <body>
     <!-- 導覽列  -->
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="shoppingCart.html">
+        <a class="navbar-brand" href="./shoppingCart_index.html">
             <i class="fa fa-heart text-info" aria-hidden="true"></i>
             六角血拼賣賣
         </a>
