--- a/shoppingCart_checkout.html
+++ b/shoppingCart_checkout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="custom.css">
-    <title>Document</title>
+    <title>結帳</title>
 </head>
 
 <body>
