--- a/shoppingCart_index.html
+++ b/shoppingCart_index.html
@@ -248,10 +248,13 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <div class="btn-group btn-group-sm">
-                                            <a href="./shoppingCart_product.html" class="btn btn-outline-secondary">SM</a>
+                                            <a href="./shoppingCart_product.html"
+                                                class="btn btn-outline-secondary">SM</a>
                                             <a href="#" class="btn btn-outline-secondary disabled">M</a>
-                                            <a href="./shoppingCart_product.html" class="btn btn-outline-secondary">L</a>
-                                            <a href="./shoppingCart_product.html" class="btn btn-outline-secondary">XL</a>
+                                            <a href="./shoppingCart_product.html"
+                                                class="btn btn-outline-secondary">L</a>
+                                            <a href="./shoppingCart_product.html"
+                                                class="btn btn-outline-secondary">XL</a>
                                         </div>
                                     </div>
                                 </div>
@@ -368,7 +371,7 @@
                                 <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
                             </li>
                             <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item" aria-current="page">
+                            <li class="page-item active" aria-current="page">
                                 <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="page-item"><a class="page-link" href="#">3</a></li>
